<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="300dip"
	android:layout_height="fill_parent">
	<TableRow android:layout_width="fill_parent">
		<TextView android:layout_height="wrap_content" android:text="@string/label_add_txt_name"
			android:layout_width="130dip" android:gravity="right" android:layout_marginLeft="10dip" android:layout_marginRight="3dip"
			android:layout_marginBottom="10dip" />
		<EditText android:layout_height="wrap_content" android:layout_width="130dip" android:gravity="left"
			android:layout_marginLeft="3dip" android:layout_marginRight="10dip" android:layout_marginBottom="10dip" android:id="@+id/label_add_name"
			android:hint="@string/label_add_hint_name" android:maxLength="16" />
	</TableRow>
	<TableRow android:layout_width="fill_parent">
		<TextView android:layout_height="wrap_content" android:text="@string/label_add_txt_goal"
			android:layout_width="130dip" android:gravity="right" android:layout_marginLeft="10dip" android:layout_marginRight="3dip"
			android:layout_marginBottom="10dip" />
		<EditText android:layout_height="wrap_content" android:layout_width="130dip" android:gravity="left"
			android:layout_marginLeft="3dip" android:layout_marginRight="10dip" android:layout_marginBottom="10dip" android:id="@+id/label_add_goal"
			android:inputType="numberDecimal" />
	</TableRow>
</TableLayout>






